--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>The Interleagues</h1>
+<p>Coming soon.</p>
+<img src="https://i.imgur.com/gyy1MzB.png" alt="The Greatest thing in basketball">
 </body>
 </html>
